# bot-core_sdk

./: CMakeLists.txt  LICENSE  sdk.hxx
libs/: CMakeLists.txt
